--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ if(OPENMP_FOUND)
 endif()
 
 add_library(SIPL Core.cpp Types.cpp Visualization.cpp)
-option(sipl_use_gtk "Use GTK for visualization and loading images in SIPL" ON)
-if(sipl_use_gtk)
+option(SIPL_USE_GTK "Use GTK for visualization and loading images in SIPL" ON)
+if(SIPL_USE_GTK)
 	message("-- Compiling SIPL with GTK")
 	find_package (PkgConfig REQUIRED)
 	pkg_check_modules (GTK2 REQUIRED gtk+-2.0 gthread-2.0)
