--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ option(SIPL_USE_GTK "Use GTK for visualization and loading images in SIPL" ON)
 if(SIPL_USE_GTK)
 	message("-- Compiling SIPL with GTK")
 	find_package (PkgConfig REQUIRED)
-	pkg_check_modules (GTK2 REQUIRED gtk+-2.0 gthread-2.0)
+	pkg_check_modules (GTK2 REQUIRED gtk+-2.0 glib-2.0)
 	include_directories (${GTK2_INCLUDE_DIRS})
 	set(SIPL_INCLUDE_DIRS ${GTK2_INCLUDE_DIRS} PARENT_SCOPE)
 	link_directories (${GTK2_LIBRARY_DIRS})
